syntax = "proto3";

option go_package = "github.com/wireless-monkeys/backend/pkg/api";

package api;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
